<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceGroup app:title="@string/pref_camera_settings_category"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <IconListPreference
            app:key="pref_camera_flashmode_key"
            app:defaultValue="@string/pref_camera_flashmode_default"
            app:title="@string/pref_camera_flashmode_title"
            app:icons="@array/camera_flashmode_icons"
            app:largeIcons="@array/camera_flashmode_largeicons"
            app:entries="@array/pref_camera_flashmode_entries"
            app:entryValues="@array/pref_camera_flashmode_entryvalues"
            app:labelList="@array/pref_camera_flashmode_labels" />
    <IconListPreference
            app:key="pref_camera_exposure_key"
            app:defaultValue="@string/pref_exposure_default"
            app:title="@string/pref_exposure_title"
            app:singleIcon="@drawable/ic_exposure_holo_light" />
    <IconListPreference
            app:key="pref_camera_scenemode_key"
            app:defaultValue="@string/pref_camera_scenemode_default"
            app:title="@string/pref_camera_scenemode_title"
            app:singleIcon="@drawable/ic_sce"
            app:entries="@array/pref_camera_scenemode_entries"
            app:labelList="@array/pref_camera_scenemode_labels"
            app:icons="@array/pref_camera_scenemode_icons"
            app:largeIcons="@array/pref_camera_scenemode_icons"
            app:entryValues="@array/pref_camera_scenemode_entryvalues" />
    <IconListPreference
            app:key="pref_camera_whitebalance_key"
            app:defaultValue="@string/pref_camera_whitebalance_default"
            app:title="@string/pref_camera_whitebalance_title"
            app:icons="@array/whitebalance_icons"
            app:largeIcons="@array/whitebalance_largeicons"
            app:entries="@array/pref_camera_whitebalance_entries"
            app:entryValues="@array/pref_camera_whitebalance_entryvalues"
            app:labelList="@array/pref_camera_whitebalance_labels" />
    <RecordLocationPreference
            app:key="pref_camera_recordlocation_key"
            app:defaultValue="@string/pref_camera_recordlocation_default"
            app:title="@string/pref_camera_recordlocation_title"
            app:icons="@array/camera_recordlocation_icons"
            app:largeIcons="@array/camera_recordlocation_largeicons"
            app:entries="@array/pref_camera_recordlocation_entries"
            app:labelList="@array/pref_camera_recordlocation_labels"
            app:entryValues="@array/pref_camera_recordlocation_entryvalues" />
    <ListPreference
            app:key="pref_camera_picturesize_key"
            app:title="@string/pref_camera_picturesize_title"
            app:entries="@array/pref_camera_picturesize_entries"
            app:entryValues="@array/pref_camera_picturesize_entryvalues" />
    <ListPreference
            app:key="pref_camera_focusmode_key"
            app:defaultValue="@array/pref_camera_focusmode_default_array"
            app:title="@string/pref_camera_focusmode_title"
            app:entries="@array/pref_camera_focusmode_entries"
            app:labelList="@array/pref_camera_focusmode_labels"
            app:entryValues="@array/pref_camera_focusmode_entryvalues" />
    <IconListPreference
            app:key="pref_camera_id_key"
            app:defaultValue="@string/pref_camera_id_default"
            app:title="@string/pref_camera_id_title"
            app:icons="@array/camera_id_icons"
            app:entries="@array/camera_id_entries"
            app:labelList="@array/camera_id_labels"
            app:largeIcons="@array/camera_id_largeicons" />
    <IconListPreference
            app:key="pref_camera_hdr_key"
            app:defaultValue="@string/pref_camera_hdr_default"
            app:title="@string/pref_camera_scenemode_entry_hdr"
            app:entries="@array/pref_camera_hdr_entries"
            app:icons="@array/pref_camera_hdr_icons"
            app:largeIcons="@array/pref_camera_hdr_icons"
            app:labelList="@array/pref_camera_hdr_labels"
            app:entryValues="@array/pref_camera_hdr_entryvalues" />
    <CountDownTimerPreference
            app:key="pref_camera_timer_key"
            app:defaultValue="@string/pref_camera_timer_default"
            app:title="@string/pref_camera_timer_title" />
    <ListPreference
            app:key="pref_camera_timer_sound_key"
            app:defaultValue="@string/pref_camera_timer_sound_default"
            app:title="@string/pref_camera_timer_sound_title"
            app:entries="@array/pref_camera_timer_sound_entries"
            app:entryValues="@array/pref_camera_timer_sound_entryvalues" />
</PreferenceGroup>
